@@ -38,6 +38,12 @@
 <p>2019-02-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/tiff.c (ReadTIFFImage): Make sure that image is in
+DirectClass mode and ignore any claimed colormap when the image is
+read using the RGBAStrippedMethod, RGBATiledMethod, or
+RGBAPuntMethod cases.  Fixes oss-fuzz 12195
+&quot;graphicsmagick/coder_PTIF_fuzzer: Use-of-uninitialized-value in
+ExportGrayQuantumType&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/miff.c (ReadMIFFImage): Improve pixel buffer calculations
 to defend against overflow.  Assure that zlib and bzlib decode the
 expected number of bytes for a pixel row.  Fixes oss-fuzz issue
