@@ -1,5 +1,12 @@
 2019-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/tiff.c (ReadTIFFImage): Make sure that image is in
+	DirectClass mode and ignore any claimed colormap when the image is
+	read using the RGBAStrippedMethod, RGBATiledMethod, or
+	RGBAPuntMethod cases.  Fixes oss-fuzz 12195
+	"graphicsmagick/coder_PTIF_fuzzer: Use-of-uninitialized-value in
+	ExportGrayQuantumType". (Credit to OSS-Fuzz)
+
 	* coders/miff.c (ReadMIFFImage): Improve pixel buffer calculations
 	to defend against overflow.  Assure that zlib and bzlib decode the
 	expected number of bytes for a pixel row.  Fixes oss-fuzz issue
